--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "changelog": "gulp changelog"
+    "bump": "gulp bump",
+    "release": "gulp release"
   },
   "author": "",
   "license": "ISC",
