--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-git": "^1.6.0",
-    "gulp-util": "^3.0.7"
+    "gulp-util": "^3.0.7",
+    "run-sequence": "^1.1.4"
   }
 }
