--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "conventional-changelog": "^0.5.1"
   },
   "devDependencies": {
+    "babel": "^5.8.23",
     "gulp": "^3.9.0",
     "gulp-git": "^1.6.0",
     "gulp-util": "^3.0.7",
